Update the test server version to 5.2-SNAPSHOT so that the builds do not fail due to expired letsencrypt certificates. (#982)
Also, updated the xsd versions in test xmls and removed transitive dependency check for RC jar.